--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prismjs": "^1.23.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
+    "react-bootstrap-icons": "^1.4.0",
     "react-dom": "^16.13.1",
     "react-simple-code-editor": "^0.11.0"
   }
